# fat-tree-qram

./: .gitignore  README.md  pyproject.toml
finalreport/: finalreport.aux  finalreport.bbl  finalreport.bcf  finalreport.blg  finalreport.fdb_latexmk  finalreport.fls  finalreport.out  finalreport.run.xml  finalreport.tex  references.bib
midreport/: midreport.aux  midreport.bbl  midreport.bcf  midreport.blg  midreport.dvi  midreport.fdb_latexmk  midreport.fls  midreport.run.xml  midreport.tex  references.bib
presentation/: qram-slides.pptx  script.md
src/bb_qram/: __init__.py  bb_qram.py  router.py
src/fat_tree_alex/: fat_tree.py
src/fat_tree_qram/: __init__.py
src/qram/: __init__.py  bb_qram.py  fat_tree.py  fat_tree_qram.py  scheduler.py
src/qram/core/: __init__.py  operations.py  router.py  tree.py
src/qram/simulation/: __init__.py  simulator.py
tests/: __init__.py  test_bb_qram.py  test_qram.py  test_router.py
