[project]
name = "fat-tree-qram"
version = "0.1.0"
description = "Fat-tree QRAM implementation"
readme = "README.md"
authors = [
    { name = "olifog", email = "oliverfogelin@gmail.com" },
    { name = "Newsh123" }
]
requires-python = ">=3.12"
dependencies = [
    "qiskit>=2.2.3",
]

[project.scripts]
fat-tree = "fat_tree_qram:main"
bb = "bb_qram:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]
