[project]
name = "fat-tree-qram"
version = "0.1.0"
description = "Fat-tree QRAM implementation"
readme = "README.md"
authors = [
    { name = "olifog", email = "oliverfogelin@gmail.com" },
    { name = "Newsh123" }
]
requires-python = ">=3.12"
dependencies = [
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.43.1",
]

[project.scripts]
qram = "qram.fat_tree_qram:main"
fat-tree-alex = "fat_tree_alex.fat_tree:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qram", "src/fat_tree_alex"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
    "pytest>=8.0.0",
]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["qiskit.*", "qiskit_aer.*"]
ignore_missing_imports = true
